# PySharpe

./: .coverage  .gitignore  .mcp.json  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Proxies.md  README.md  app.py  build_tests.bash  coverage.xml  debug_opt.py  debug_opt2.py  portfolio_config.json  proxy_map.json  pyproject.toml  pytest_output.txt  requirements-dev.txt  requirements.txt
.agents/skills/pysharpe-allocation/: SKILL.md
.agents/skills/pysharpe-allocation/scripts/: allocation-pipeline.py
.agents/skills/pysharpe-backtesting/: SKILL.md
.agents/skills/pysharpe-data-pipeline/: SKILL.md
.agents/skills/pysharpe-data-pipeline/references/: gotchas-data.md
.agents/skills/pysharpe-development/: SKILL.md
.agents/skills/pysharpe-development/references/: architecture.md  test-map.md
.agents/skills/pysharpe-guardrails/: SKILL.md
.agents/skills/pysharpe-metrics/: SKILL.md
.agents/skills/pysharpe-optimization/: SKILL.md
.github/: SECURITY.md  copilot-instructions.md
.github/workflows/: ci.yml  python-package.yml
docs/: GOTCHAS.md  TEST_MAP.md  architecture.md  flowchart.md
drafts/: plot_price.py  portfolio_weights_plot.py  yfinance_fetch.py
examples/: quickstart.ipynb  scoring_analysis.ipynb
original_program/: data_collector.py  portfolio_optimization.py
outputs/: cad_portfolio_collated.csv  cad_portfolio_metadata.json  cad_portfolio_performance.txt  cad_portfolio_weights.txt
scripts/: benchmark.py  demo_backtest.py  export_current_state.py  rebalance.py  stress_test_bayesian.py  test_location_matrix.py  unified_allocator.py  validate_custom_allocation.py
src/pysharpe/: PySharpe Next Steps.py  __init__.py  cli.py  config.py  data_collector.py  exceptions.py  gui.py  logging_utils.py  metrics.py  models.py  portfolio_optimization.py  workflows.py
src/pysharpe/analysis/: __init__.py  backtest.py  backtest_engine.py  benchmarks.py  categorization.py  comparison.py  scoring.py  time_series.py  visualization.py
src/pysharpe/app/: __init__.py  analytics.py  backtest.py  charts.py  data.py  dca.py  rebalance_ui.py
src/pysharpe/data/: __init__.py  collation.py  data_collector.py  fetch.py  fetcher.py  linkage.py  portfolio.py  workflows.py
src/pysharpe/execution/: __init__.py  allocator.py  brokerage.py  cash_flow_rebalance.py  rebalance.py  tax_tracker.py
src/pysharpe/guardrails/: __init__.py  tax_compliance.py
src/pysharpe/optimization/: __init__.py  base.py  bayesian.py  black_litterman.py  estimators.py  expected_returns.py  hrp.py  models.py  optimizer.py  portfolio_optimization.py  sharpe_optimizer.py  tax_location.py  weights.py
src/pysharpe/validation/: __init__.py  friction.py  ledger.py  metrics.py  resampling.py  sample_size.py
src/pysharpe/visualization/: __init__.py  correlation.py  dca.py  equity_curve.py  frontier.py  plotting.py  utils.py
tests/: conftest.py  test_2d_allocation.py  test_analysis.py  test_analysis_backtest_engine.py  test_analysis_benchmarks.py  test_analysis_comparison.py  test_analysis_time_series.py  test_analysis_transaction_costs.py  test_analysis_visualization.py  test_analysis_walk_forward.py  test_app_helpers.py  test_app_streamlit.py  test_backtest_page.py  test_black_litterman.py  test_brokerage.py  test_cash_flow_rebalance.py  test_categorization.py  test_cli.py  test_collation.py  test_collation_proxy.py  test_config.py  test_constraints_verification.py  test_covariance_shrinkage.py  test_data_collector.py  test_data_fetcher_cache.py  test_data_linkage.py  test_data_linkage_stitched.py  test_dca.py  test_fetch.py  test_fetcher.py  test_friction.py  test_fx_adjustment.py  test_fx_routing.py  test_ledger.py  test_logging_utils.py  test_metrics.py  test_optimization_base.py  test_optimization_bayesian.py  test_optimization_hrp.py  test_optimization_models.py  (+15 more)
tests/benchmarks/: test_normalize_weights_benchmark.py
tests/data/: sample_portfolio.csv
tests/golden/: aaa_history_parsed.csv  aaa_history_raw.csv
(+4 files in other folders)
