[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysharpe"
version = "0.1.0"
description = "Python tools for portfolio optimization and analysis."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "PySharpe Developers"}]
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "yfinance>=0.2",
    "PyPortfolioOpt>=1.5",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "coverage>=7.5",
]

[project.scripts]
pysharpe = "pysharpe.cli:main"
pysharpe-gui = "pysharpe.gui:main"

[project.urls]
Homepage = "https://github.com/janusson/PySharpe/"
Issues = "https://github.com/janusson/PySharpe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # bugbear
    "I",  # import sorting
    "UP", # pyupgrade
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
