[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysharpe"
version = "0.2.0"
description = "Python tools for portfolio optimization and analysis."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "PySharpe Developers"}]
license = {file = "LICENSE"}
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.11",
    "yfinance>=0.2",
    "PyPortfolioOpt>=1.5",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "coverage>=7.5",
    "black>=24.0",
]

[project.scripts]
pysharpe = "pysharpe.cli:main"

[project.urls]
Homepage = "https://github.com/janusson/PySharpe/"
Issues = "https://github.com/janusson/PySharpe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"pysharpe" = ["*.ipynb", "docs/*", "examples/*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # bugbear
    "I",  # import sorting
    "UP", # pyupgrade
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--quiet --disable-warnings --cov=pysharpe --cov-report=term-missing --cov-fail-under=80"
norecursedirs = [".git", "examples", "docs"]
markers = [
    "benchmark: Micro-benchmark coverage for performance-sensitive helpers.",
]
